--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1 id="vm">Voting Machine</h1>
         <div id="maindiv">
-            <div>
+            <div id="evm">
                 <h2>
                     Name:
                     <input type="text" id="i1">
